[project]
name = "xcc-roman-converter"
version = "0.1.0"
description = "Converts Roman numbers to Arabic numbers and vice versa."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=6.2.0",
    "structlog>=25.4.0",
    "typer>=0.16.0",
]

[project.scripts]
easyconvert = "xcc_roman_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/xcc_roman_converter"]